tests/NormalTests/paczka1/small_fuzzy/19039754.err
Error in line 2: NbjYCLYWT A258 78,5
Error in line 8: Wd91Ik A472 69,0
